# MagScore-7.0

./: README.md
MAGScore 7.0/: .cursorrules  README.md  architecture.txt  pyproject.toml  pytest.ini  requirements.txt
MAGScore 7.0/magscore/: __init__.py
MAGScore 7.0/magscore/bots/: __init__.py  analysis_bot.py  support_bot.py
MAGScore 7.0/magscore/engine/: __init__.py  behavior_engine.py  definitions.py  match_flow.py  memory_engine.py  pattern_engine.py  quality_control.py  signal_memory.py  vision_engine.py
MAGScore 7.0/magscore/internal/: __init__.py
MAGScore 7.0/magscore/internal/legacy_betting/: __init__.py
MAGScore 7.0/magscore/modules/: __init__.py  cohesion.py  intensity.py  psychology.py  stability.py
MAGScore 7.0/magscore/orchestration/: __init__.py  lexicon_guard.py  pipeline.py
MAGScore 7.0/tests/: __init__.py  conftest.py  test_analysis_bot.py  test_behavior_engine.py  test_behavior_signals.py  test_flow_engine_v1_1.py  test_magscore_7_0.py  test_normalize_api.py  test_partie4_integration.py  test_partie5_integration.py  test_partie6_integration.py  test_pattern_engine_v1_1.py  test_pipeline_neutral.py  test_quality_control.py  test_support_bot.py
MAGScore 7.0/tests/legacy/: __init__.py  test_legacy_betting.py
